# ZCai2

./: .env.example  .gitignore  README.md  currents_api.py  email_sender.py  main.py  openai_api.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml
